[package]
name = "compiler"
version = "0.1.0"
authors = ["Anton Holmberg <anton.holmberg@greenely.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }
anyhow = "1.0"

[dev-dependencies]
rust-analyzer = "0.0.1"
