[package]
name = "parser"
version = "0.1.0"
authors = ["Anton Holmberg <anton@antonholmberg.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer"}
thiserror = "1.0"

[dev-dependencies]
rust-analyzer = "0.0.1"
